@startuml

interface lib.persistence.Database
lib.persistence.Database <|-- standalone.Postgres

lib.persistence.Database *-- lib.orchestration.Provider
interface lib.orchestration.ServiceProvider
class lib.orchestration.Provider {
  ~DatabaseService
  ~OrganizationService
  ~MetricService
  ~...
}
lib.orchestration.ServiceProvider <|-- lib.orchestration.Provider

lib.orchestration.ServiceProvider *-- lib.orchestration.OrganizationService
lib.orchestration.ServiceProvider *-- lib.orchestration.MetricService
lib.orchestration.ServiceProvider *-- lib.orchestration.XXXService
note bottom
asset services depend
on each other
through the ServiceProvider
end note

@enduml
